--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ section {
 .score h2,
 p {
   font-size: 30px;
+  letter-spacing: 2px;
 }
 
 .score h2 {
@@ -38,28 +39,36 @@ p {
 .intro {
   color: white;
   height: 50vh;
+  letter-spacing: 4px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 
 .intro h1 {
-  font-size: 40px;
+  font-size: 50px;
+  font-weight: 500;
 }
 
 .intro button,
 .match button {
   font-size: large;
+  letter-spacing: 2px;
   color: white;
   width: 150px;
   height: 45px;
   border: none;
   border-radius: 3px;
   outline: none;
-  background-color: rgb(45, 117, 96);
+  background-color: rgb(63, 119, 102);
   cursor: pointer;
+}
+
+button:hover {
+  background-color: rgb(65, 177, 145);
+  /* transition: background-color 0.5s ease; */
 }
 
 .match {
@@ -67,12 +76,14 @@ p {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  transition: opacity 0.5s ease 0.5s;
 }
 
 .winner {
   color: white;
   text-align: center;
   font-size: 50px;
+  letter-spacing: 2px;
   font-weight: 400;
 }
 
