--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ p {
 }
 
 button:hover {
-  background-color: rgb(65, 177, 145);
+  background-color: rgba(255, 255, 255, 0.438);
   /* transition: background-color 0.5s ease; */
 }
 
